Correction alignement menu page accueil

--- a/style.scss
+++ b/style.scss
@@ -2,7 +2,6 @@ body
 {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
 }
 .colorandfont
@@ -13,6 +12,7 @@ body
 }
 header
 {
+    margin: auto;
     width: 90%;
     display: flex;
     justify-content: center;
@@ -20,12 +20,13 @@ header
 .title
 {
     font-size: 5em;
-    font-weight: 1000;
+    font-weight: 900;
 }
 main
 {
+    margin: auto;
     margin-top: 25px;
-    margin-bottom: 150px;
+    margin-bottom: 140px;
 }
 article
 {
@@ -43,30 +44,22 @@ img
         animation: zoom 1s forwards;
     }
 }
-@keyframes zoom
+.infuture
 {
-    0%{
-        transform: scale(1);
-        opacity: 1;
-    }
-    100%{
-        transform: scale(1.5);
-        opacity: 0.75;
-    }
-}
-aside
-{
-    display: flex;
-    justify-content: center;
-    border-radius: 30px;
+    border-radius: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 .soon
 {
+    margin: auto;
     font-size: 3em;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 footer
 {
-    width: 90%;
+    width: 88.5%;
     display: flex;
     justify-content: space-between;
     font-size: 2.5em;
@@ -81,41 +74,17 @@ footer
 }
 .legal
 {
-    padding-left: 25px;
+    padding-left: 20px;
     &:hover{
         animation: wiggle 0.5s 2 ease;
     }
 }
 .contact
 {
-    padding-right: 25px;
+    padding-right: 20px;
     text-align: right;
     &:hover{
         animation: wiggle 0.5s 2 ease;
-    }
-}
-@keyframes wiggle
-{
-    0%{
-        transform: translate(0px);
-    }
-    10%, 30%{
-        transform: translate(-6px);
-    }
-    20%{
-        transform: translate(-12px);
-    }
-    50%{
-     transform: translate(0px);
-    }
-    60%, 80%{
-        transform: translate(6px);
-    }
-    70%{
-        transform: translate(12px);
-    }
-    100%{
-     transform: translate(0px);
     }
 }
 
@@ -140,20 +109,29 @@ footer
     .menu-nav
     {
         display: flex;
-        justify-content: center;
+        flex-direction: column;
+    }
+    .firstline
+    {
+        display: flex;
+    }
+    .secondline
+    {
+        display: flex;
     }
     article
     {
-        margin-right: 25px;
         width: 300px;
         height: 400px;
+        margin-left: 12.5px;
+        margin-right: 12.5px;
     }
     img
     {
         width: 300px;
         height: 400px;
     }
-    aside
+    .infuture
     {
         width: 40%;
         min-width: 300px;
@@ -165,7 +143,7 @@ footer
     }
     footer
     {
-        width: 60%;
+        width: 59.5%;
         font-size: 2em;
     }
     .legal
@@ -175,5 +153,41 @@ footer
     .contact
     {
         margin-right: 25px;
+    }
+}
+
+@keyframes wiggle
+{
+    0%{
+        transform: translate(0px);
+    }
+    10%, 30%{
+        transform: translate(-6px);
+    }
+    20%{
+        transform: translate(-12px);
+    }
+    50%{
+     transform: translate(0px);
+    }
+    60%, 80%{
+        transform: translate(6px);
+    }
+    70%{
+        transform: translate(12px);
+    }
+    100%{
+     transform: translate(0px);
+    }
+}
+@keyframes zoom
+{
+    0%{
+        transform: scale(1);
+        opacity: 1;
+    }
+    100%{
+        transform: scale(1.5);
+        opacity: 0.75;
     }
 }
